# Coral-RaiseYourHack-QualcomnTrackExample

./: README.md  test.py  test_.py
Coral-Interface-Agent/: .env_sample  .gitignore  0-langchain-interface.py  Dockerfile  README.md  main.py  pyproject.toml  run_agent.sh
Coral-Monzo-Agent/: Dockerfile  README.md  env_sample  langchain-monzo-agent.py  main.py  pyproject.toml
Coral-Monzo-Agent/.github/workflows/: docker-image.yml
