[project]
name = "coral-monzo-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "anyio>=4.9.0",
    "langchain>=0.3.25",
    "langchain-mcp-adapters==0.1.7",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.21",
    "langchain-groq",
    "python-dotenv>=1.1.0",
]
